# itam-dl-proyecto

./: .gitignore  Dockerfile  README.md  docker-build.sh  docker-run.sh  pyproject.toml  requirements.txt  setup.py
cfg/: flickr8k.ini
proyecto_dl/: data.py  vae.py  wgan_gp.py
src/: data.py  model.py  trainer.py
src/proyecto_dl/: data.py
